# libnica

./: .gitignore  .travis.yml  HACKING  Makefile.am  README.md  abi.sh  configure.ac  current_symbols  update_format.sh
data/: libthingamabob.pc.in  nica.pc.in
m4/: ax_valgrind_check.m4
src/: array.c  array.h  files.c  hashmap.c  hashmap.h  inifile.c  libnica.sym  list.c  log.c  nc-string.c  util.c  util.h  writer.c
src/include/: array.h  hashmap.h  list.h  thingamabob.h  util.h
src/include/nica/: array.h  files.h  hashmap.h  inifile.h  list.h  log.h  macros.h  nc-string.h  nica.h  util.h  writer.h
tests/: check-array.c  check-core.c  check-files.c  check-hashmap.c  check-inifile.c  check-list.c
tests/ini/: broken_section_end.ini  broken_section_start.ini  empty_key.ini  escaped_chars.ini  just_assign.ini  sectionless.ini  valid_padding.ini  wellformed.ini
